# neverd

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  setup.cfg
src/never/: app.py  cli.py  forms.py  helpers.py  menus.py  objects.py  popups.py  utils.py
src/neverd/: app.py  cli.py  forms.py  helpers.py  menus.py  objects.py  popups.py  utils.py
src/tk_2d_dialog/: cli.py  constants.py  forms.py  generic_widgets.py  helpers.py  main.py  objects.py  popups.py  utils.py  widgets.py
