[metadata]
name = tk_2d_dialog
version = attr: tk_2d_dialog.__version__
author = CoopTeam-CERFACS
author_email = coop@cerfacs.com
description = A 2D tkinter dialog
long_description = file: README.md
long_description_content_type = text/markdown
url = https://nitrox.cerfacs.fr/open-source/tk_2d_dialog
project_urls =
    Homepage = https://gitlab.com/cerfacs/tk_2d_dialog
    Documentation = https://tk_2d_dialog.readthedocs.io/en/latest/
    Bug Tracker = https://gitlab.com/cerfacs/tk_2d_dialog/-/issues
classifiers = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
keywords =
    gui
    tkinter

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6
install_requires =
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tk_2d_dialog = tk_2d_dialog.cli:main_cli