[metadata]
name = never
version = attr: never.__version__
author = L. F. Pereira
author_email = luisfgpereira95@gmail.com
description = A 2D reverse engineering tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lpereira95/never
project_urls =
    Homepage = https://github.com/lpereira95/never
    Bug Tracker = https://github.com/lpereira95/never/issues
classifiers = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
keywords =
    gui
    tkinter
    reverse engineering
    2D dialog
    geometry

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6
install_requires =
    click
    pillow
    numpy

[options.packages.find]
where = src

[options.package_data]
* = images/*

[options.entry_points]
console_scripts =
    never = never.cli:main_cli